Modification in EMS core (improvements and dependencies upgrades)